fixed instructions overflow bug

--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -74,7 +74,6 @@ h5 {
 }
 
 .instructions-content {
-  max-height: 300px;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
   padding: 0 10px 0;
